--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
   <body>
     <div class="container">
       <h1>Number Guesser</h1>
-      <div id="game">
-        <p>
-          Guess a number between <span class="min-num">1</span> and
-          <span class="max-num">10</span>
-        </p>
         <form action="">
+          <label for="">Range is between 1 and ...</label>
+          <input type="text" placeholder="Enter number" class="inputNumber" />
           <input
             type="number"
             id="guess-input"
